# fract

./: .gitignore  .gitmodules  Cargo.toml  README.md
benches/: fract.rs
crates/compute/: Cargo.toml
crates/compute/src/: color.wgsl  lib.rs  perturbation_shader.wgsl  pipeline.rs  shader.wgsl  software.rs
crates/deep/: Cargo.toml
crates/deep/src/: main.rs  viewer.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: main.rs
src/: accelerated.rs  compute.rs  config.rs  encoder.rs  lib.rs  main.rs  orbit.rs  palette.rs  perturbation_shader.wgsl  pipeline.rs  shader.wgsl  software.rs  ssaa.rs  viewer.rs
src/shaders/: mandelbrot.wgsl  ssaa.wgsl
