[package]
name = "fract"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "viewer"

[[bin]]
name = "render"

[[bin]]
name = "permute"

[[bin]]
name = "collage"

[dependencies]
tint = { path = "blaze/crates/tint" }
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
png = { version = "0.18.0", features = ["unstable", "zlib-rs"] }
indicatif = "0.18.3"
env_logger = "0.11.8"
pollster = "0.4.0"
wgpu = "28.0.0"
glazer = { path = "blaze/crates/glazer", default-features = false }
colorgrad = { version = "0.8.0", features = ["preset"] }
malachite-float = "0.9.0"
malachite = "0.9.0"
