[package]
name = "compute"
version = "0.1.0"
edition = "2024"

[features]
default = ["env_logger", "pollster", "wgpu", "winit"]
software = ["rayon"]

[dependencies]
tint = { path = "../../../blaze/crates/tint" }
rug = { workspace = true }
num = "0.4.3"

env_logger = { version = "0.11.8", optional = true }
pollster = { version = "0.4.0", optional = true }
wgpu = { version = "28.0.0", optional = true }
winit = { version = "0.30", optional = true, default-features = false, features = [
	"rwh_06",
] }

rayon = { version = "1.11.0", optional = true }
