[package]
name = "compute"
version = "0.1.0"
edition = "2024"

[dependencies]
tint = { path = "../../../blaze/crates/tint" }
rug = { workspace = true }
num = "0.4.3"

# accelerated
env_logger = "0.11.8"
pollster = "0.4.0"
wgpu = "28.0.0"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }

# software
rayon = "1.11.0"
