[package]
name = "compute"
version = "0.1.0"
edition = "2024"

[dependencies]
tint = { path = "../../../blaze/crates/tint" }
rug = { workspace = true }
num = "0.4.3"

# accelerated
env_logger = "0.11.8"
pollster = "0.4.0"
wgpu = "28.0.0"
# just need the window but this reduces the features in winit lol
glazer = { path = "../../../blaze/crates/glazer", default-features = false }

# software
rayon = "1.11.0"
