[package]
name = "deep"
version = "0.1.0"
edition = "2024"

[dependencies]
compute = { path = "../compute" }
tint = { path = "../../../blaze/crates/tint" }
rug = { workspace = true }
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
png = { version = "0.18.0", features = ["unstable", "zlib-rs"] }
indicatif = "0.18.3"
